[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://assets/fith/game_over.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dffsandg8wwdg" path="res://assets/fonts/better-vcr-5.2.ttf" id="2"]
[ext_resource type="AudioStream" uid="uid://bha4rkmfm4im2" path="res://assets/music/557858_In-The-Face-Of-Defeat.mp3" id="3"]

[sub_resource type="LabelSettings" id="1"]
font = ExtResource("2")
font_size = 50
outline_size = 3
outline_color = Color(1, 0, 0, 1)
shadow_size = 4
shadow_color = Color(1, 0, 0, 1)
script = null

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.933333, 0.552941, 0.262745, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
script = null

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.933333, 0.552941, 0.262745, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 1, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
script = null

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.933333, 0.552941, 0.262745, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0.6, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
script = null

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.933333, 0.552941, 0.262745, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
script = null

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(0.933333, 0.552941, 0.262745, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.74902, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
script = null

[sub_resource type="Animation" id="7"]
resource_name = "GO"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
script = null

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/CONTINUE:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-750, 866)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/QUIT:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/QUIT:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-742, 786)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/ColorRect2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
script = null

[sub_resource type="Animation" id="9"]
resource_name = "cont"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/CONTINUE:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-250, 300.5), Vector2(345, 300.5)]
}
script = null

[sub_resource type="Animation" id="10"]
resource_name = "cont_press"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cont"
}]
}
script = null

[sub_resource type="Animation" id="11"]
resource_name = "quit"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/QUIT:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/QUIT:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1160, 300.5), Vector2(645, 300.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_quit"
}]
}
script = null

[sub_resource type="AnimationLibrary" id="12"]
_data = {
"GO": SubResource("7"),
"RESET": SubResource("8"),
"cont": SubResource("9"),
"cont_press": SubResource("10"),
"quit": SubResource("11")
}
script = null

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_top = 121.0
offset_right = 171.0
offset_bottom = 171.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("1")

[node name="CONTINUE" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = 866.0
offset_right = -588.0
offset_bottom = 913.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0.6, 0, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("3")
theme_override_styles/pressed = SubResource("4")
theme_override_styles/disabled = SubResource("2")
theme_override_styles/focus = SubResource("2")
text = "CONTINUE"

[node name="QUIT" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -742.0
offset_top = 786.0
offset_right = -580.0
offset_bottom = 833.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.74902, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("2")
theme_override_styles/hover = SubResource("5")
theme_override_styles/pressed = SubResource("6")
theme_override_styles/disabled = SubResource("2")
theme_override_styles/focus = SubResource("2")
disabled = true
text = "QUIT"

[node name="AnimationGO" type="AnimationPlayer" parent="CanvasLayer"]
process_priority = 3
process_physics_priority = 3
root_node = NodePath("../..")
libraries = {
"": SubResource("12")
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]
wait_time = 0.4
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
autoplay = true

[connection signal="pressed" from="CanvasLayer/CONTINUE" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasLayer/QUIT" to="." method="_on_quit_pressed"]
